= fixed not catching errors when storing posts = re-defined variables list as some were a bit too random = tagged more posts as example

--- a/example/templates/home.html
+++ b/example/templates/home.html
@@ -1,8 +1,8 @@
 %include top.html%
-Hello world!
+%blog_title%
 All:
-%index_all%
-
+%all_posts%
+<hr />
 Tags:
-%index_tags%
+%all_tags%
 %include bottom.html%
