--- a/example/templates/top.html
+++ b/example/templates/top.html
@@ -7,6 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="/static/highlight.min.css">
-    <title>%title%</title>
+    <title>%blog_title%</title>
 </head>
 <body>
